# EQcorrscan

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .stickler.yml  .travis.yml  3D_nodes.eps  CHANGES.md  CNAME  CONTRIBUTORS.md  COSA_test.py  LFE_brightness_search.py  LFE_brightness_search_SLURM.py  LFEsearch.py  LICENCE.txt  Lags_in.pkl  MANIFEST.in  Nodes_detected.csv  Nodes_in.pkl  README.md  Rakefile  Stations_in.pkl  Test_install.py  WHATVsearch.py  __init__.py  _config.yml  about.md  appveyor.yml  arg_test.py  azure-pipelines.yml  changelog.md  codecov.yml  conftest.py  contributing.md  core.html  debug_log.txt  genindex.html  index.html  index.md  index.rst  (+30 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  test_conda_env.yml  test_conda_env_macOS.yml  test_condarc.yml
_includes/: google_analytics.html  index.md
_layouts/: default.html
_modules/: EQcorrscan_plotting.html  Sfile_util.html  bright_lights.html  catalogue2DD.html  clustering.html  findpeaks.html  index.html  lag_calc.html  mag_calc.html  match_filter.html  pre_processing.html  stacking.html  template_gen.html
_posts/: 2015-11-20-jekyll-migration.md  2016-02-15-Sfile-util-updates.md  2016-02-25-Version-0.1.0.md
_sources/: index.txt  tutorial.txt
core/: bright_lights.py  bright_lights_slurm.py  clustering.py  lag_calc.py  lag_generation.py  match_filter.py  match_filter_dev.py  match_filter_legacy.py  match_filter_pyparallel.py  resolution_test.py  setup.py  template_gen.py  thresholding.py
doc/: Makefile  conf.py  modules.rst  utils.rst
eqcorrscan/: WHATVsearch.py  (+7 more)
(+3806 files in other folders)
