[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
[metadata]
description-file = README.md
[aliases]
test = pytest
## using MKL FFTW on Pan (gimkl-2017a)
#[build_ext]
#libraries = fftw3xf_gnu_pic, mkl_rt
#library-dirs =
#include-dirs =
## using MKL FFTW on Pan (intel-2015a)
#[build_ext]
#libraries = fftw3xf_intel_pic, mkl_rt
#library-dirs =
#include-dirs =
